// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table renders correctly 1`] = `
<DocumentFragment>
  .css-1yrf4lq-StyledTable {
  table-layout: fixed;
  width: 100%;
  border-collapse: collapse;
}

.css-6z2yke-StyledHead {
  border-bottom: 1px solid #d4dae7;
}

.css-1wx805j-StyledRow {
  color: #4a4f62;
}

.css-1wx805j-StyledRow a {
  color: inherit;
}

.css-1wx805j-StyledRow [data-visibility='hover'] {
  -webkit-transition: opacity 150ms;
  transition: opacity 150ms;
  opacity: 0;
  pointer-events: none;
  visibility: hidden;
}

.css-1wx805j-StyledRow:hover [data-visibility='hover'] {
  opacity: 1;
  pointer-events: auto;
  visibility: visible;
}

.css-17yd00x-StyledHeadCell-sharedCellStyle {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  color: #b2b6c3;
  text-align: left;
  padding: 8px 16px;
  font-size: 14px;
  line-height: 20px;
}

.css-jzptjg-StyledTBody[data-striped='true'] .efhaznt5:nth-of-type(even) {
  background-color: #f6f6f8;
}

.css-s0ztax-StyledBodyCell-sharedCellStyle {
  overflow: hidden;
  white-space: nowrap;
  padding: 8px 16px;
  font-size: 14px;
  line-height: 20px;
}

<table
    class="css-1yrf4lq-StyledTable efhaznt7"
  >
    <thead
      class="css-6z2yke-StyledHead efhaznt6"
    >
      <tr
        class="css-1wx805j-StyledRow efhaznt5"
      >
        <th
          class="css-17yd00x-StyledHeadCell-sharedCellStyle efhaznt4"
        >
          ID
        </th>
        <th
          class="css-17yd00x-StyledHeadCell-sharedCellStyle efhaznt4"
        >
          Status
        </th>
        <th
          class="css-17yd00x-StyledHeadCell-sharedCellStyle efhaznt4"
        >
          Date
        </th>
      </tr>
    </thead>
    <tbody
      class="css-jzptjg-StyledTBody efhaznt0"
      data-striped="false"
    >
      <tr
        class="css-1wx805j-StyledRow efhaznt5"
      >
        <td
          class="css-s0ztax-StyledBodyCell-sharedCellStyle efhaznt3"
        >
          165
        </td>
        <td
          class="css-s0ztax-StyledBodyCell-sharedCellStyle efhaznt3"
        >
          Ongoing
        </td>
        <td
          class="css-s0ztax-StyledBodyCell-sharedCellStyle efhaznt3"
        >
          Yesterday
        </td>
      </tr>
      <tr
        class="css-1wx805j-StyledRow efhaznt5"
      >
        <td
          class="css-s0ztax-StyledBodyCell-sharedCellStyle efhaznt3"
        >
          56
        </td>
        <td
          class="css-s0ztax-StyledBodyCell-sharedCellStyle efhaznt3"
        >
          Resolved
        </td>
        <td
          class="css-s0ztax-StyledBodyCell-sharedCellStyle efhaznt3"
        >
          1 hour ago
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Table renders correctly while loading 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.css-1yrf4lq-StyledTable {
  table-layout: fixed;
  width: 100%;
  border-collapse: collapse;
}

.css-6z2yke-StyledHead {
  border-bottom: 1px solid #d4dae7;
}

.css-1wx805j-StyledRow {
  color: #4a4f62;
}

.css-1wx805j-StyledRow a {
  color: inherit;
}

.css-1wx805j-StyledRow [data-visibility='hover'] {
  -webkit-transition: opacity 150ms;
  transition: opacity 150ms;
  opacity: 0;
  pointer-events: none;
  visibility: hidden;
}

.css-1wx805j-StyledRow:hover [data-visibility='hover'] {
  opacity: 1;
  pointer-events: auto;
  visibility: visible;
}

.css-17yd00x-StyledHeadCell-sharedCellStyle {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  color: #b2b6c3;
  text-align: left;
  padding: 8px 16px;
  font-size: 14px;
  line-height: 20px;
}

.css-jzptjg-StyledTBody[data-striped='true'] .efhaznt5:nth-of-type(even) {
  background-color: #f6f6f8;
}

.css-15mp5sh-StyledRow-StyledLoadingRow {
  color: #4a4f62;
  cursor: progress;
}

.css-15mp5sh-StyledRow-StyledLoadingRow a {
  color: inherit;
}

.css-15mp5sh-StyledRow-StyledLoadingRow [data-visibility='hover'] {
  -webkit-transition: opacity 150ms;
  transition: opacity 150ms;
  opacity: 0;
  pointer-events: none;
  visibility: hidden;
}

.css-15mp5sh-StyledRow-StyledLoadingRow:hover [data-visibility='hover'] {
  opacity: 1;
  pointer-events: auto;
  visibility: visible;
}

.css-s0ztax-StyledBodyCell-sharedCellStyle {
  overflow: hidden;
  white-space: nowrap;
  padding: 8px 16px;
  font-size: 14px;
  line-height: 20px;
}

.css-1prxobb-StyledContainer-StyledSkeleton {
  position: relative;
  display: block;
  width: 100%;
  overflow: hidden;
  cursor: progress;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.css-1gmiakp-Line {
  height: 12px;
  width: 120px;
  max-width: 100%;
  border-radius: 8px;
  background-color: #d4dae7;
}

.css-q3qai6-StyledDiv {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      #ffffff00,
      #ffffff4D,
      #ffffff66,
      #ffffff4D,
      #ffffff00
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}

@media (prefers-reduced-motion: reduce) {
  .css-q3qai6-StyledDiv {
    -webkit-animation: unset;
    animation: unset;
  }
}

<table
    class="css-1yrf4lq-StyledTable efhaznt7"
  >
    <thead
      class="css-6z2yke-StyledHead efhaznt6"
    >
      <tr
        class="css-1wx805j-StyledRow efhaznt5"
      >
        <th
          class="css-17yd00x-StyledHeadCell-sharedCellStyle efhaznt4"
        >
          ID
        </th>
        <th
          class="css-17yd00x-StyledHeadCell-sharedCellStyle efhaznt4"
        >
          Date
        </th>
      </tr>
    </thead>
    <tbody
      class="css-jzptjg-StyledTBody efhaznt0"
      data-striped="false"
    >
      <tr
        class="efhaznt2 css-15mp5sh-StyledRow-StyledLoadingRow efhaznt5"
      >
        <td
          class="css-s0ztax-StyledBodyCell-sharedCellStyle efhaznt3"
        >
          <div
            class="efhaznt1 css-1prxobb-StyledContainer-StyledSkeleton e181dehd1"
          >
            <div
              class="css-1gmiakp-Line e16zi9h40"
            />
            <div
              class="css-q3qai6-StyledDiv e181dehd0"
            />
          </div>
        </td>
        <td
          class="css-s0ztax-StyledBodyCell-sharedCellStyle efhaznt3"
        >
          <div
            class="efhaznt1 css-1prxobb-StyledContainer-StyledSkeleton e181dehd1"
          >
            <div
              class="css-1gmiakp-Line e16zi9h40"
            />
            <div
              class="css-q3qai6-StyledDiv e181dehd0"
            />
          </div>
        </td>
      </tr>
      <tr
        class="efhaznt2 css-15mp5sh-StyledRow-StyledLoadingRow efhaznt5"
      >
        <td
          class="css-s0ztax-StyledBodyCell-sharedCellStyle efhaznt3"
        >
          <div
            class="efhaznt1 css-1prxobb-StyledContainer-StyledSkeleton e181dehd1"
          >
            <div
              class="css-1gmiakp-Line e16zi9h40"
            />
            <div
              class="css-q3qai6-StyledDiv e181dehd0"
            />
          </div>
        </td>
        <td
          class="css-s0ztax-StyledBodyCell-sharedCellStyle efhaznt3"
        >
          <div
            class="efhaznt1 css-1prxobb-StyledContainer-StyledSkeleton e181dehd1"
          >
            <div
              class="css-1gmiakp-Line e16zi9h40"
            />
            <div
              class="css-q3qai6-StyledDiv e181dehd0"
            />
          </div>
        </td>
      </tr>
      <tr
        class="efhaznt2 css-15mp5sh-StyledRow-StyledLoadingRow efhaznt5"
      >
        <td
          class="css-s0ztax-StyledBodyCell-sharedCellStyle efhaznt3"
        >
          <div
            class="efhaznt1 css-1prxobb-StyledContainer-StyledSkeleton e181dehd1"
          >
            <div
              class="css-1gmiakp-Line e16zi9h40"
            />
            <div
              class="css-q3qai6-StyledDiv e181dehd0"
            />
          </div>
        </td>
        <td
          class="css-s0ztax-StyledBodyCell-sharedCellStyle efhaznt3"
        >
          <div
            class="efhaznt1 css-1prxobb-StyledContainer-StyledSkeleton e181dehd1"
          >
            <div
              class="css-1gmiakp-Line e16zi9h40"
            />
            <div
              class="css-q3qai6-StyledDiv e181dehd0"
            />
          </div>
        </td>
      </tr>
      <tr
        class="efhaznt2 css-15mp5sh-StyledRow-StyledLoadingRow efhaznt5"
      >
        <td
          class="css-s0ztax-StyledBodyCell-sharedCellStyle efhaznt3"
        >
          <div
            class="efhaznt1 css-1prxobb-StyledContainer-StyledSkeleton e181dehd1"
          >
            <div
              class="css-1gmiakp-Line e16zi9h40"
            />
            <div
              class="css-q3qai6-StyledDiv e181dehd0"
            />
          </div>
        </td>
        <td
          class="css-s0ztax-StyledBodyCell-sharedCellStyle efhaznt3"
        >
          <div
            class="efhaznt1 css-1prxobb-StyledContainer-StyledSkeleton e181dehd1"
          >
            <div
              class="css-1gmiakp-Line e16zi9h40"
            />
            <div
              class="css-q3qai6-StyledDiv e181dehd0"
            />
          </div>
        </td>
      </tr>
      <tr
        class="efhaznt2 css-15mp5sh-StyledRow-StyledLoadingRow efhaznt5"
      >
        <td
          class="css-s0ztax-StyledBodyCell-sharedCellStyle efhaznt3"
        >
          <div
            class="efhaznt1 css-1prxobb-StyledContainer-StyledSkeleton e181dehd1"
          >
            <div
              class="css-1gmiakp-Line e16zi9h40"
            />
            <div
              class="css-q3qai6-StyledDiv e181dehd0"
            />
          </div>
        </td>
        <td
          class="css-s0ztax-StyledBodyCell-sharedCellStyle efhaznt3"
        >
          <div
            class="efhaznt1 css-1prxobb-StyledContainer-StyledSkeleton e181dehd1"
          >
            <div
              class="css-1gmiakp-Line e16zi9h40"
            />
            <div
              class="css-q3qai6-StyledDiv e181dehd0"
            />
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Table renders correctly with striped body 1`] = `
<DocumentFragment>
  .css-1yrf4lq-StyledTable {
  table-layout: fixed;
  width: 100%;
  border-collapse: collapse;
}

.css-6z2yke-StyledHead {
  border-bottom: 1px solid #d4dae7;
}

.css-1wx805j-StyledRow {
  color: #4a4f62;
}

.css-1wx805j-StyledRow a {
  color: inherit;
}

.css-1wx805j-StyledRow [data-visibility='hover'] {
  -webkit-transition: opacity 150ms;
  transition: opacity 150ms;
  opacity: 0;
  pointer-events: none;
  visibility: hidden;
}

.css-1wx805j-StyledRow:hover [data-visibility='hover'] {
  opacity: 1;
  pointer-events: auto;
  visibility: visible;
}

.css-17yd00x-StyledHeadCell-sharedCellStyle {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  color: #b2b6c3;
  text-align: left;
  padding: 8px 16px;
  font-size: 14px;
  line-height: 20px;
}

.css-jzptjg-StyledTBody[data-striped='true'] .efhaznt5:nth-of-type(even) {
  background-color: #f6f6f8;
}

.css-s0ztax-StyledBodyCell-sharedCellStyle {
  overflow: hidden;
  white-space: nowrap;
  padding: 8px 16px;
  font-size: 14px;
  line-height: 20px;
}

<table
    class="css-1yrf4lq-StyledTable efhaznt7"
  >
    <thead
      class="css-6z2yke-StyledHead efhaznt6"
    >
      <tr
        class="css-1wx805j-StyledRow efhaznt5"
      >
        <th
          class="css-17yd00x-StyledHeadCell-sharedCellStyle efhaznt4"
        >
          ID
        </th>
        <th
          class="css-17yd00x-StyledHeadCell-sharedCellStyle efhaznt4"
        >
          Status
        </th>
        <th
          class="css-17yd00x-StyledHeadCell-sharedCellStyle efhaznt4"
        >
          Date
        </th>
      </tr>
    </thead>
    <tbody
      class="css-jzptjg-StyledTBody efhaznt0"
      data-striped="true"
    >
      <tr
        class="css-1wx805j-StyledRow efhaznt5"
      >
        <td
          class="css-s0ztax-StyledBodyCell-sharedCellStyle efhaznt3"
        >
          165
        </td>
        <td
          class="css-s0ztax-StyledBodyCell-sharedCellStyle efhaznt3"
        >
          Ongoing
        </td>
        <td
          class="css-s0ztax-StyledBodyCell-sharedCellStyle efhaznt3"
        >
          Yesterday
        </td>
      </tr>
      <tr
        class="css-1wx805j-StyledRow efhaznt5"
      >
        <td
          class="css-s0ztax-StyledBodyCell-sharedCellStyle efhaznt3"
        >
          56
        </td>
        <td
          class="css-s0ztax-StyledBodyCell-sharedCellStyle efhaznt3"
        >
          Resolved
        </td>
        <td
          class="css-s0ztax-StyledBodyCell-sharedCellStyle efhaznt3"
        >
          1 hour ago
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
